2012-09-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/asxxsrc/asdata.c,
	* sdas/asxxsrc/asexpr.c,
	* sdas/asxxsrc/aslist.c,
	* sdas/asxxsrc/asmain.c,
	* sdas/asxxsrc/asxxxx.h,
	* sdas/linksrc/aslink.h,
	* sdas/linksrc/lklist.c,
	* src/hc08/main.c,
	* src/mcs51/main.c,
	* src/z80/main.c: again a small step towards ASxxxx v5

2012-09-17 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/z80/ralloc2.cc (inst_sane): fixed bug #3558402

2012-09-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/bug3564649.c:
	  Disable test for host, since we cannot assume C11 support yet.

2012-09-16 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/gcc-torture-execute-20030209-1.c:
	  Reduced array size, reenabled test.
	* support/regression/tests/gcc-torture-execute-991016-1.c:
	  Enabled test for targets that support long long, since returning long long was implemented some time ago.

2012-09-16 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCglue.c (emitRegularMap, printIvalType, printIvalBitFields),
	* src/SDCCast.c (constExprValue): fixed bug #3560781 and related
	* support/regression/tests/bug3564649.c: ensure noreturn function
	  does not return

2012-09-16 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  More efficient stack pointer restoration.
	* support/regression/tests/bug3564649.c:
	  Regression test for bug #3564649.

2012-09-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/valdiag/tests/tentdecl.c,
	* support/valdiag/tests/primtypes.c,
	* support/valdiag/tests/constantRange.c,
	* support/valdiag/tests/funcdec.c,
	* support/valdiag/tests/overflow.c,
	* support/valdiag/Makefile.in,
	* support/valdiag/valdiag.py: update to work with current SDCC version

2012-09-14 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCBBlock.c (iCode2eBBlock),
	* src/SDCCcflow.c (eBBSuccessors): fixed bug #3564649
